Updated gitignore because Unity sucks.

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,10 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+NRG Scouting Application 2024/Assets/Settings/URP-Balanced.asset
+NRG Scouting Application 2024/Assets/Settings/URP-HighFidelity-Renderer.asset
+NRG Scouting Application 2024/Assets/Settings/URP-HighFidelity.asset
+NRG Scouting Application 2024/Assets/Settings/URP-Performant.asset
+NRG Scouting Application 2024/Assets/UniversalRenderPipelineGlobalSettings.asset
+NRG Scouting Application 2024/ProjectSettings/ShaderGraphSettings.asset
+NRG Scouting Application 2024/UserSettings/Layouts/default-2022.dwlt
