--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ NRG Scouting Application 2024/Assets/Settings/URP-Performant.asset
 NRG Scouting Application 2024/Assets/UniversalRenderPipelineGlobalSettings.asset
 NRG Scouting Application 2024/ProjectSettings/ShaderGraphSettings.asset
 NRG Scouting Application 2024/UserSettings/Layouts/default-2022.dwlt
+Assets/Comfortaa-VariableFont_wght SDF.asset
