--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "NRG Scouting Application 2024.sln"
+    "dotnet.defaultSolution": "NRG-Scouting-2024.sln"
 }
