--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,5 @@ NRG Scouting Application 2024/Assets/UniversalRenderPipelineGlobalSettings.asset
 NRG Scouting Application 2024/ProjectSettings/ShaderGraphSettings.asset
 NRG Scouting Application 2024/UserSettings/Layouts/default-2022.dwlt
 Assets/Comfortaa-VariableFont_wght SDF.asset
+Assets/Comfortaa-VariableFont_wght SDF.asset
+Assets/Comfortaa-VariableFont_wght SDF.asset
