I MIGHT be cookin :fire: (TBA API)

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,6 @@ NRG Scouting Application 2024/UserSettings/Layouts/default-2022.dwlt
 Assets/Comfortaa-VariableFont_wght SDF.asset
 Assets/Comfortaa-VariableFont_wght SDF.asset
 Assets/Comfortaa-VariableFont_wght SDF.asset
+Assets/Comfortaa-VariableFont_wght SDF.asset
+UserSettings/Layouts/default-2022.dwlt
+UserSettings/EditorUserSettings.asset
