--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,6 @@ Assets/Comfortaa-VariableFont_wght SDF.asset
 Assets/Comfortaa-VariableFont_wght SDF.asset
 UserSettings/Layouts/default-2022.dwlt
 UserSettings/EditorUserSettings.asset
+Assets/Comfortaa-VariableFont_wght SDF.asset
+UserSettings/EditorUserSettings.asset
+UserSettings/Layouts/default-2022.dwlt
