--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@ UserSettings/EditorUserSettings.asset
 UserSettings/Layouts/default-2022.dwlt
 .DS_Store
 build_BurstDebugInformation_DoNotShip/StaticLibraries/lib_burst_generated.txt
+Assets/Comfortaa-VariableFont_wght SDF.asset
